# FlyMatic_MainUnit

./: .gitattributes  .gitignore  README.md  help.txt
Architecture/: system_arch.drawio
Event_Handler/: AddressLabels.hpp  EventAddress.hpp  EventHandler_Addres.hpp
SW_components/: CMakeLists.txt  help.txt  local-toolchain-config_template.cmake  main.cpp  toolchain-rpi.cmake
SW_components/02_Srv/: main.cpp
SW_components/02_Srv/config/os_cfg/: Thread_Manager_Cfg.cpp  Thread_Manager_Cfg.hpp
SW_components/02_Srv/threads/: Thread_Manager.cpp  Thread_Manager.hpp  Thread_Manager_Cfg.cpp  Thread_Manager_Cfg.hpp
SW_components/02_Srv/threads/Thread_Manager_UT/: CMakeLists.txt  Thread_Manager_UT.cpp
SW_components/03_IoHwab/flight_control/: balancer.cpp  balancer.hpp
SW_components/03_IoHwab/flight_control/balancer_UT/: CMakeLists.txt  balancer_UT.cpp  test_and_coverage.sh
SW_components/03_IoHwab/flight_control/balancer_UT/mocks/: Thread_Manager_mock.cpp  empty_mock.cpp  mpu6050_mock.cpp  pwm_mock.cpp  spi_mock.cpp
SW_components/03_IoHwab/flight_control/balancer_UT/stubs/: Thread_Manager.hpp  mpu6050.hpp  pwm.hpp  spi.hpp
SW_components/03_IoHwab/mpu6050/: mpu6050.cpp  mpu6050.hpp
SW_components/03_IoHwab/mpu6050/mpu6050_UT/: CMakeLists.txt  mpu6050_UT.cpp
SW_components/03_IoHwab/mpu6050/mpu6050_UT/mocks/: i2c_mock.cpp
SW_components/03_IoHwab/mpu6050/mpu6050_UT/stubs/: i2c.hpp
SW_components/04_Drv/i2c/: i2c.cpp  i2c.hpp  i2c_cfg.hpp
SW_components/04_Drv/i2c/i2c_UT/: CMakeLists.txt  i2c_UT.cpp
SW_components/04_Drv/i2c/i2c_UT/mocks/: fcntl2_mock.cpp  ioctl_mock.cpp  smbus_mock.cpp
SW_components/04_Drv/i2c/i2c_UT/stubs/: fcntl2.h
SW_components/04_Drv/i2c/i2c_UT/stubs/i2c/: smbus.h
SW_components/04_Drv/i2c/i2c_UT/stubs/linux/: i2c-dev.h
SW_components/04_Drv/pwm/: pwm.hpp  pwm_cfg.hpp
SW_components/04_Drv/pwm/pwm_UT/: CMakeLists.txt  pwm_UT.cpp
SW_components/04_Drv/spi/: spi.cpp  spi.hpp
SW_components/flight_control/: i2c.cpp  i2c.hpp  i2c_cfg.hpp  pwm.cpp  pwm.hpp  pwm_cfg.hpp
SW_components/flight_control/i2c_UT/: CMakeLists.txt  i2c_UT.cpp
SW_components/flight_control/i2c_UT/mocks/: smbus_mock.cpp
SW_components/flight_control/i2c_UT/stubs/sys/: ioctl.h
SW_components/services/: Thread_Manager.cpp  Thread_Manager.hpp  Thread_Manager_Cfg.cpp  Thread_Manager_Cfg.hpp
SW_components/services/Thread_Manager_UT/: CMakeLists.txt  Thread_Manager_UT.cpp
SW_componets/: CMakeLists.txt  dummy.txt  main.cpp
Shared_memory/: CMakeLists.txt  main.cpp
Shared_memory/ipc/: SharedDictonary.hpp  shared_memory.cpp
Shared_memory/ipc/integration_tests/Testcase01/: CMakeLists.txt  main.cpp  testcase01.py
Shared_memory/ipc/shared_memory/: semaphore.hpp  shared_memory.cpp  shared_memory.hpp
Shared_memory/ipc/ut/: CMakeLists.txt  flag_UT.cpp  shm_UT.cpp
Shared_memory/ipc/ut/mocks/: shm_mocks.cpp
Shared_memory/ipc/utils/: PtrUtils.hpp  flag.hpp  shared_memory_utils.cpp  shared_memory_utils.hpp
Testing/: CMakeLists.txt  EventAddress_UT.cpp  test.cpp
Tools/Env/: setup_rpi.sh
Tools/Testing/: CMakeLists.txt  test.cpp
